force-app/main/default/objects/Executive_Briefing__c/Executive_Briefing__c.object-meta.xml
<CustomObject>
    <description>Object created for Sales users to generate Seismic Live Doc to create Executive Briefing Summary.</description>
    <label>Executive Briefing</label>
    <nameField>
        <displayFormat>EB-{000000}</displayFormat>
        <label>Executive Briefing  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Executive Briefing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>