force-app/main/default/objects/Executive_Briefing__c/fields/Access__c.field-meta.xml
<CustomField>
    <fullName>Access__c</fullName>
    <formula>TEXT( Customer_Attendee_Name__r.Access__c )</formula>
    <label>Access</label>
    <type>Text</type>
</CustomField>