force-app/main/default/objects/Executive_Briefing__c/fields/Account_Manager_Sales_Leader__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Sales_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager/Sales Leader</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>notEqual</operation>
            <value>Enterprise</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Executive Briefing (Account Manager/Sales Leader)</relationshipLabel>
    <relationshipName>Executive_Briefing1</relationshipName>
    <type>Lookup</type>
</CustomField>