force-app/main/default/objects/Executive_Briefing__c/fields/Account_Summary_Image__c.field-meta.xml
<CustomField>
    <fullName>Account_Summary_Image__c</fullName>
    <label>Account Summary Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>