force-app/main/default/objects/Executive_Briefing__c/fields/Attended_a_Previous_CEC_3__c.field-meta.xml
<CustomField>
    <fullName>Attended_a_Previous_CEC_3__c</fullName>
    <label>Attended a Previous CEC 3?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>