force-app/main/default/objects/Executive_Briefing__c/fields/Attended_Previous_CEC_1__c.field-meta.xml
<CustomField>
    <fullName>Attended_Previous_CEC_1__c</fullName>
    <description>Attended a Previous CEC? If yes, date and brief summary.</description>
    <label>Attended a Previous CEC 1?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>