force-app/main/default/objects/Executive_Briefing__c/fields/Bio_Highlights__c.field-meta.xml
<CustomField>
    <fullName>Bio_Highlights__c</fullName>
    <label>Bio Highlights</label>
    <length>255</length>
    <type>Text</type>
</CustomField>