force-app/main/default/objects/Executive_Briefing__c/fields/Cloud_Revenue_2016__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Revenue_2016__c</fullName>
    <label>2016 Cloud Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>