force-app/main/default/objects/Executive_Briefing__c/fields/Customer_2_Previous_ECB__c.field-meta.xml
<CustomField>
    <fullName>Customer_2_Previous_ECB__c</fullName>
    <inlineHelpText>Attended a Previous ECB? If yes, date and brief summary.</inlineHelpText>
    <label>Customer 2 Previous ECB?</label>
    <type>TextArea</type>
</CustomField>