force-app/main/default/objects/Executive_Briefing__c/fields/Customer_3_Title__c.field-meta.xml
<CustomField>
    <fullName>Customer_3_Title__c</fullName>
    <label>Customer 3 Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>