force-app/main/default/objects/Executive_Briefing__c/fields/Customer_4_Access__c.field-meta.xml
<CustomField>
    <fullName>Customer_4_Access__c</fullName>
    <formula>TEXT( Customer_Attendee_Name__r.Access__c )</formula>
    <label>Customer 4 Access</label>
    <type>Text</type>
</CustomField>