force-app/main/default/objects/Executive_Briefing__c/fields/Customer_4_Previous_ECB__c.field-meta.xml
<CustomField>
    <fullName>Customer_4_Previous_ECB__c</fullName>
    <label>Customer 4 Previous ECB?</label>
    <type>TextArea</type>
</CustomField>