force-app/main/default/objects/Executive_Briefing__c/fields/Customer_Attendee1__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attendee1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Attendee1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Executive Briefing</relationshipLabel>
    <relationshipName>Executive_Briefing</relationshipName>
    <type>Lookup</type>
</CustomField>