force-app/main/default/objects/Executive_Briefing__c/fields/Customer_Attendee_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attendee_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Attendee 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Executive Briefing (Customer Attendee 2)</relationshipLabel>
    <relationshipName>Executive_Briefing1</relationshipName>
    <type>Lookup</type>
</CustomField>