force-app/main/default/objects/Executive_Briefing__c/fields/Customer_Attendee_5__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attendee_5__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Attendee 5</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Executive Briefing (Customer Attendee 5)</relationshipLabel>
    <relationshipName>Executive_Briefing4</relationshipName>
    <type>Lookup</type>
</CustomField>