force-app/main/default/objects/Executive_Briefing__c/fields/Customer_Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attendee_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Attendee Name</label>
    <referenceTo>Customer_Bio__c</referenceTo>
    <relationshipLabel>Executive Briefing</relationshipLabel>
    <relationshipName>Executive_Briefing</relationshipName>
    <type>Lookup</type>
</CustomField>