force-app/main/default/objects/Executive_Briefing__c/fields/Customer_Attendees_Bios_2__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attendees_Bios_2__c</fullName>
    <label>Customer Attendees Bios 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>