force-app/main/default/objects/Executive_Briefing__c/fields/Customer_Attendees_Bios_Pic_3__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attendees_Bios_Pic_3__c</fullName>
    <label>Customer Attendees Bios 3</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>