force-app/main/default/objects/Executive_Briefing__c/fields/Customer_Goal_3__c.field-meta.xml
<CustomField>
    <fullName>Customer_Goal_3__c</fullName>
    <label>Customer Goal 3</label>
    <type>TextArea</type>
</CustomField>