force-app/main/default/objects/Executive_Briefing__c/fields/Customer_Since__c.field-meta.xml
<CustomField>
    <fullName>Customer_Since__c</fullName>
    <inlineHelpText>What year did they first become an NCR Customer?</inlineHelpText>
    <label>Customer Since</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>