force-app/main/default/objects/Executive_Briefing__c/fields/Customer_Strategic_Objectives__c.field-meta.xml
<CustomField>
    <fullName>Customer_Strategic_Objectives__c</fullName>
    <label>Customer Strategic Objectives</label>
    <length>255</length>
    <type>Text</type>
</CustomField>