force-app/main/default/objects/Executive_Briefing__c/fields/Cutsomer_Attendees_Bio_Pic_1__c.field-meta.xml
<CustomField>
    <fullName>Cutsomer_Attendees_Bio_Pic_1__c</fullName>
    <label>Customer Attendees Bios 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>