force-app/main/default/objects/Executive_Briefing__c/fields/Friend_Foe_Neutral_1__c.field-meta.xml
<CustomField>
    <fullName>Friend_Foe_Neutral_1__c</fullName>
    <label>Friend/Foe/Neutral 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Foe</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>