force-app/main/default/objects/Executive_Briefing__c/fields/HeatMapURI__c.field-meta.xml
<CustomField>
    <fullName>HeatMapURI__c</fullName>
    <label>HeatMapURI</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>