force-app/main/default/objects/Executive_Briefing__c/fields/Highlight_Flag_2__c.field-meta.xml
<CustomField>
    <fullName>Highlight_Flag_2__c</fullName>
    <label>Highlight/Flag 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>