force-app/main/default/objects/Executive_Briefing__c/fields/HW_YTD_Actual_2017__c.field-meta.xml
<CustomField>
    <fullName>HW_YTD_Actual_2017__c</fullName>
    <label>2017 HW YTD Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>