force-app/main/default/objects/Executive_Briefing__c/fields/Key_Message_1__c.field-meta.xml
<CustomField>
    <fullName>Key_Message_1__c</fullName>
    <label>Key Message 1</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>