force-app/main/default/objects/Executive_Briefing__c/fields/Key_Message_2__c.field-meta.xml
<CustomField>
    <fullName>Key_Message_2__c</fullName>
    <label>Key Message 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>