force-app/main/default/objects/Executive_Briefing__c/fields/Key_Question_2__c.field-meta.xml
<CustomField>
    <fullName>Key_Question_2__c</fullName>
    <label>Key Question 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>