force-app/main/default/objects/Executive_Briefing__c/fields/Managed_Services_YTD_Actual_2017__c.field-meta.xml
<CustomField>
    <fullName>Managed_Services_YTD_Actual_2017__c</fullName>
    <label>2017 Managed Services YTD Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>