force-app/main/default/objects/Executive_Briefing__c/fields/Meeting_Objective_1__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Objective_1__c</fullName>
    <label>Meeting Objective 1</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>