force-app/main/default/objects/Executive_Briefing__c/fields/Meeting_Role__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Role__c</fullName>
    <label>Meeting Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>