force-app/main/default/objects/Executive_Briefing__c/fields/NCR_Attendee_3__c.field-meta.xml
<CustomField>
    <fullName>NCR_Attendee_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NCR Attendee 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Executive_Briefing2</relationshipName>
    <type>Lookup</type>
</CustomField>