force-app/main/default/objects/Executive_Briefing__c/fields/NCR_Attendee_4_Role__c.field-meta.xml
<CustomField>
    <fullName>NCR_Attendee_4_Role__c</fullName>
    <label>NCR Attendee 4 Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>