force-app/main/default/objects/Executive_Briefing__c/fields/NCR_Attendee_4_Title__c.field-meta.xml
<CustomField>
    <fullName>NCR_Attendee_4_Title__c</fullName>
    <formula>NCR_Attendee_4__r.Title</formula>
    <label>NCR Attendee 4 Title</label>
    <type>Text</type>
</CustomField>