force-app/main/default/objects/Executive_Briefing__c/fields/NCR_Goal_1__c.field-meta.xml
<CustomField>
    <fullName>NCR_Goal_1__c</fullName>
    <label>NCR Goal 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>