force-app/main/default/objects/Executive_Briefing__c/fields/News__c.field-meta.xml
<CustomField>
    <fullName>News__c</fullName>
    <label>News</label>
    <type>Url</type>
</CustomField>