force-app/main/default/objects/Executive_Briefing__c/fields/Official_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Official_Temperature__c</fullName>
    <label>Official Temperature</label>
    <type>TextArea</type>
</CustomField>