force-app/main/default/objects/Executive_Briefing__c/fields/Opportunity_1_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_1_Amount__c</fullName>
    <formula>Opportunity_1__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity 1 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>