force-app/main/default/objects/Executive_Briefing__c/fields/Opportunity_1_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_1_Forecast_Category__c</fullName>
    <formula>TEXT(Opportunity_1__r.Forecast_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity 1 Forecast Category</label>
    <type>Text</type>
</CustomField>