force-app/main/default/objects/Executive_Briefing__c/fields/Opportunity_3__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity 3</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Name__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Executive Briefing (Opportunity 3)</relationshipLabel>
    <relationshipName>Executive_Briefing2</relationshipName>
    <type>Lookup</type>
</CustomField>