force-app/main/default/objects/Executive_Briefing__c/fields/Opportunity_3_Amount__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_3_Amount__c</fullName>
    <formula>Opportunity_3__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity 3 Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>