force-app/main/default/objects/Executive_Briefing__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <label>Ownership</label>
    <type>Url</type>
</CustomField>