force-app/main/default/objects/Executive_Briefing__c/fields/PS_Est_Wallet_Share_2016__c.field-meta.xml
<CustomField>
    <fullName>PS_Est_Wallet_Share_2016__c</fullName>
    <label>2016 PS Est. % Wallet Share</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>