force-app/main/default/objects/Executive_Briefing__c/fields/Referenceable__c.field-meta.xml
<CustomField>
    <fullName>Referenceable__c</fullName>
    <label>Referenceable?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>