force-app/main/default/objects/Executive_Briefing__c/fields/SW_Est_Wallet_Share_2016__c.field-meta.xml
<CustomField>
    <fullName>SW_Est_Wallet_Share_2016__c</fullName>
    <label>2016 SW Est. % Wallet Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>