force-app/main/default/objects/Executive_Briefing__c/fields/SW_Revenue_2015__c.field-meta.xml
<CustomField>
    <fullName>SW_Revenue_2015__c</fullName>
    <label>2015 SW Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>