force-app/main/default/objects/Executive_Briefing__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>Customer_Attendee_Name__r.Title__c</formula>
    <label>Title</label>
    <type>Text</type>
</CustomField>