force-app/main/default/objects/Executive_Briefing__c/fields/Total_2015__c.field-meta.xml
<CustomField>
    <fullName>Total_2015__c</fullName>
    <formula>Cloud_Revenue_2015__c + HW_Revenue_2015__c + Managed_Services_Revenue_2015__c + PS_Revenue_2015__c +  SW_Revenue_2015__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2015 Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>